overall layout, pictures no longer go out of the container,

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -13,16 +13,45 @@ video {
   display: block;
 }
 
+header {
+  border-bottom: 2px solid black;
+  position: sticky;
+  top: 0;
+  background: white;
+  padding: 10px 0;
+}
+
+footer {
+  background: black;
+  height: 350px;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+  font-family: "CabinetGroteskExtra", sans-serif;
+}
+
+footer p {
+  color: white;
+  font-size: 12px;
+}
+
 h1 {
   font-family: "CabinetGroteskExtra", sans-serif;
   text-transform: uppercase;
   font-size: 40px;
+  padding-top: 5px;
 }
 
 p {
   font-family: "Roboto Mono", serif;
   font-size: 20px;
   font-weight: 500;
+}
+
+nav {
+  padding-top: 12px;
 }
 
 nav a {
